--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hiki-js-cdn by hikikomorime</title>
+    <title>OpenCDN.me</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -20,10 +20,10 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/hikikomorime/Hiki-JS-CDN">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/hikikomorime/Hiki-JS-CDN/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/hikikomorime/Hiki-JS-CDN/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
+          <li class="fork"><a href="https://github.com/hikikomorime/Hiki-JS-CDN">Join me on GitHub</a></li>
+          <!-- <li class="downloads"><a href="https://github.com/hikikomorime/Hiki-JS-CDN/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/hikikomorime/Hiki-JS-CDN/tarball/master">TAR</a></li> -->
+          <li class="title">Last update: 02.07.2012</li>
         </nav>
       </div><!-- end header -->
 
@@ -31,8 +31,8 @@
 
       <section>
         <div id="title">
-          <h1>Hiki-js-cdn</h1>
-          <p>CDN of most popular and not so popular javascripts out there</p>
+          <h1>OpenCDN.me</h1>
+          <p>CDN of the most popular <small>(and not so popular)</small> javascript libraries out there</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/hikikomorime">hikikomorime</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
