--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <p>CDN of the most popular <small>(and not so popular)</small> javascript libraries out there</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/hikikomorime">hikikomorime</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+          <span class="credits right">Hosted on GitHub</span>
         </div>
 
         <h1>Hiki-JS-CDN</h1>
