--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@
           <span class="credits right">Hosted on GitHub</span>
         </div>
 
-        <h1>Hiki-JS-CDN</h1>
+        <h2>Choose your destiny</h2>
 
-<p>CDN of most popular and not so popular javascripts out there</p>
+		<p>
+			<h3>jQuery</h3>
+				<ul>
+					<li>latest 1.7.2</li>
+				</ul>
+		</p>
       </section>
 
     </div>
