--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>OpenCDN.me</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -43,7 +43,11 @@
 		<p>
 			<h3>jQuery</h3>
 				<ul>
-					<li>latest 1.7.2</li>
+					<li><a href="">latest 1.7.2</a></li>
+				</ul>
+			<h3>Angular.js</h3>
+				<ul>
+					<li></li>
 				</ul>
 		</p>
       </section>
