--- a/found.html
+++ b/found.html
@@ -11,7 +11,7 @@
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
 
-  <title>Welcome to Foundation</title>
+  <title>OpenCDN.me</title>
 
   <!-- Included CSS Files -->
   <link rel="stylesheet" href="stylesheets/foundation.css">
@@ -33,8 +33,8 @@
 
   <div class="row">
     <div class="twelve columns">
-      <h2>Welcome to Foundation</h2>
-      <p>This is version 3.0 released on June 30, 2012.</p>
+      <h2>OpenCDN.me</h2>
+      <p>CDN of the most popular (and not so popular) javascript libraries out there</p>
       <hr />
     </div>
   </div>
