--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Portal by hikikomorime</title>
+    <title>OpenCDN.me</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -23,7 +23,7 @@
           <li class="fork"><a href="https://github.com/hikikomorime/portal">View On GitHub</a></li>
           <li class="downloads"><a href="https://github.com/hikikomorime/portal/zipball/master">ZIP</a></li>
           <li class="downloads"><a href="https://github.com/hikikomorime/portal/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
+          <li class="title">UPDATE: 03.07.2012</li>
         </nav>
       </div><!-- end header -->
 
@@ -31,11 +31,11 @@
 
       <section>
         <div id="title">
-          <h1>Portal</h1>
-          <p></p>
+          <h1>OpenCDN.me</h1>
+          <p>The most popular <small>and not so popular</small> JS libraries out there</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/hikikomorime">hikikomorime</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+          <span class="credits right">Hosted on GitHub & Cloudflare</span>
         </div>
 
         <h3>Welcome to GitHub Pages.</h3>
