--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@
           <h1>OpenCDN.me</h1>
           <p>The most popular <small>and not so popular</small> JS libraries out there</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/hikikomorime">hikikomorime</a></span>
-          <span class="credits right">Hosted on GitHub & Cloudflare</span>
         </div>
 
         <h3>Welcome to GitHub Pages.</h3>
@@ -64,6 +62,11 @@ $ git checkout gh-pages
 <h3>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<div id="title">
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/hikikomorime">hikikomorime</a></span>
+          <span class="credits right">Hosted on GitHub & Cloudflare</span>
+          </div>
       </section>
 
     </div>
