--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>OpenCDN.me</h1>
+          <h1>Open<span id="yello">CDN</span>.me</h1>
           <p>The most popular <small>and not so popular</small> JS libraries out there</p>
           <hr>
         </div>
