--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
 
       <section>
         <div id="title">
-          <h1>Open<span id="yello">CDN</span>.me</h1>
+          <h1>Open<span class="yello">CDN</span><small>.me</small></h1>
           <p>The most popular <small>and not so popular</small> JS libraries out there</p>
           <hr>
         </div>
 
-        <h3>Welcome to GitHub Pages.</h3>
+<p>Everyone is using javascript libraries nowadays but linking to several sources might be annoying. There's Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
+<p>With Open<span class="yello">CDN</span>.me you have them all in one place. That's neat right?</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<h3>How to use our repository?</h3>
+<p>For example you want to use jQuery on your site. Then just paste this code into your HEAD section</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>< script src="//opencdn.me/base/jquery/1.7.2/jquery.min.js" >< /script >
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
