--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 <pre><code>< script src="//opencdn.me/base/jquery/1.7.2/jquery.min.js" >< /script >
 </code></pre>
 
+<script src="https://gist.github.com/3035406.js?file=head section"></script>
+
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>Designer Templates</h3>
