--- a/index.html
+++ b/index.html
@@ -37,13 +37,10 @@
         </div>
 
 <p>Everyone is using javascript libraries nowadays but linking to several sources might be annoying. There's Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
-<p>With Open<span class="yello">CDN</span>.me you have them all in one place. That's neat right?</p>
+<p>With <span class="whit">Open<span class="yello">CDN</span>.me</span> you have them all in one place. That's neat right?</p>
 
 <h3>How to use our repository?</h3>
 <p>For example you want to use jQuery on your site. Then just paste this code into your HEAD section</p>
-
-<pre><code>< script src="//opencdn.me/base/jquery/1.7.2/jquery.min.js" >< /script >
-</code></pre>
 
 <script src="https://gist.github.com/3035406.js?file=head section"></script>
 
