--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
 <script src="https://gist.github.com/3035406.js?file=head section"></script>
 
+<h3>Choose your destiny</h3>
+
 <table id="jsTable" class="tablesorter"> 
 <thead> 
 <tr> 
@@ -65,6 +67,11 @@
     <td>jQuery</td> 
     <td>1.7.2</td> 
     <td>http://opencdn.me/base/jquery/1.7.2/jquery.js</td> 
+</tr>
+<tr> 
+    <td>Mootools</td> 
+    <td>1.4.5</td> 
+    <td>http://opencdn.me/base/moo/1.4.5/mootools.js</td> 
 </tr> 
 </tbody> 
 </table> 
