--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>OpenCDN.me</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/jquery.min.js"></script>
     <script type="text/javascript" src="javascripts/jquery.tablesorter.min.js"></script> 
     <script type="text/javascript">
-    $(document).ready(function() 
+$(document).ready(function() 
     { 
-        $("#jsTable").tablesorter(); 
+        $("#jsTable").tablesorter( {sortList: [[1,0], [0,0]]} ); 
     } 
 ); 
     </script>
