--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@ $(document).ready(function()
 <p>Everyone is using javascript libraries nowadays but linking to several sources might be annoying. There's Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
 <p>With <span class="whit">Open<span class="yello">CDN</span>.me</span> you have them all in one place. That's neat right?</p>
 
-<h3>How to use our repository?</h3>
-<p>For example you want to use jQuery on your site. Then just paste this code into your HEAD section</p>
-
-<script src="https://gist.github.com/3035406.js?file=head section"></script>
+<h3>Always up to date!</h3>
+<p>Be sure that the script you are using is always up to date and you have the latest version available. No need to check library websites or change the link in your code. <span class="whit">Open<span class="yello">CDN</span>.me</span> will take care of that.</p>
 
 <h3>Choose your destiny</h3>
 
@@ -64,17 +62,27 @@ $(document).ready(function()
 </thead> 
 <tbody> 
 <tr> 
-    <td>jQuery</td> 
+    <td><a href="http://jquery.com" target="_blank">jQuery</a></td> 
     <td>1.7.2</td> 
-    <td>http://opencdn.me/base/jquery/1.7.2/jquery.js</td> 
+    <td>http://opencdn.me/js/jquery/jquery.min.js</td> 
 </tr>
 <tr> 
-    <td>Mootools</td> 
+    <td><a href="http://mootools.net" target="_blank">Mootools</a></td> 
     <td>1.4.5</td> 
-    <td>http://opencdn.me/base/moo/1.4.5/mootools.js</td> 
+    <td>http://opencdn.me/js/mootools/mootools.js</td> 
+</tr>
+<tr> 
+    <td><a href="https://developers.google.com/chrome/chrome-frame/" target="_blank">Chrome Frame</a></td> 
+    <td>1.0.2</td> 
+    <td>http://opencdn.me/js/chrome-frame/CFInstall.min.js</td> 
 </tr> 
 </tbody> 
 </table> 
+
+<h3>How to use our repository?</h3>
+<p>For example you want to use jQuery on your site. Then just paste this code into your HEAD section</p>
+
+<script src="https://gist.github.com/3035406.js?file=head section"></script>
 
 <div id="title">
           <hr>
