--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
 $(document).ready(function() 
     { 
-        $("#jsTable").tablesorter( {sortList: [[1,0], [0,0]]} ); 
+        $("#jsTable").tablesorter( {sortList: [[0,0,0], [0,0,0]]} ); 
     } 
 ); 
     </script>
@@ -48,7 +48,7 @@ $(document).ready(function()
 <p>With <span class="whit">Open<span class="yello">CDN</span>.me</span> you have them all in one place. That's neat right?</p>
 
 <h3>Always up to date!</h3>
-<p>Be sure that the script you are using is always up to date and you have the latest version available. No need to check library websites or change the link in your code. <span class="whit">Open<span class="yello">CDN</span>.me</span> will take care of that.</p>
+<p>Be sure that the script you are using is always up to date and you have the latest version available. No need to check library websites or change the link in your code. <span class="whit">Open<span class="yello">CDN</span>.me</span> will take care of that. Most scripts are minified so your website should not gain too much additional weight.</p>
 
 <h3>Choose your destiny</h3>
 
@@ -62,19 +62,39 @@ $(document).ready(function()
 </thead> 
 <tbody> 
 <tr> 
+    <td><a href="http://script.aculo.us/" target="_blank">Script.aculo.us</a></td> 
+    <td>1.9.0</td> 
+    <td>http://opencdn.me/script/scriptaculous.js</td> 
+</tr>
+<tr> 
+    <td><a href="http://prototypejs.org" target="_blank">Prototype</a></td> 
+    <td>1.7.0.0</td> 
+    <td>http://opencdn.me/script/prototype.js</td> 
+</tr>
+<tr> 
     <td><a href="http://jquery.com" target="_blank">jQuery</a></td> 
     <td>1.7.2</td> 
-    <td>http://opencdn.me/js/jquery/jquery.min.js</td> 
+    <td>http://opencdn.me/script/jquery.js</td> 
+</tr>
+<tr> 
+    <td><a href="http://jquery.com" target="_blank">jQuery UI</a></td> 
+    <td>1.8.18</td> 
+    <td>http://opencdn.me/script/jquery-ui.js</td> 
+</tr>
+<tr> 
+    <td><a href="http://dojotoolkit.org" target="_blank">Dojo</a></td> 
+    <td>1.7.2</td> 
+    <td>http://opencdn.me/script/dojo.js</td> 
 </tr>
 <tr> 
     <td><a href="http://mootools.net" target="_blank">Mootools</a></td> 
     <td>1.4.5</td> 
-    <td>http://opencdn.me/js/mootools/mootools.js</td> 
+    <td>http://opencdn.me/script/mootools.js</td> 
 </tr>
 <tr> 
     <td><a href="https://developers.google.com/chrome/chrome-frame/" target="_blank">Chrome Frame</a></td> 
     <td>1.0.2</td> 
-    <td>http://opencdn.me/js/chrome-frame/CFInstall.min.js</td> 
+    <td>http://opencdn.me/script/chrome-frame.js</td> 
 </tr> 
 </tbody> 
 </table> 
