--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ $(document).ready(function()
 <p>With <span class="whit">Open<span class="yello">CDN</span>.me</span> you have them all in one place. That's neat right?</p>
 
 <h3>Always up to date!</h3>
-<p>Be sure that the script you are using is always up to date and you have the latest version available. No need to check library websites or change the link in your code. <span class="whit">Open<span class="yello">CDN</span>.me</span> will take care of that. Most scripts are minified so your website should not gain too much additional weight.</p>
+<p>Be sure that the script you are using is always up to date and you have the <span class="yello">latest version available</span>. No need to check library websites or update the links in your code. <span class="whit">Open<span class="yello">CDN</span>.me</span> will take care of that. <br />All scripts are <span class="yello">minified</span> so your website should not gain too much additional weight.</p>
 
 <h3>Choose your destiny</h3>
 
@@ -61,6 +61,11 @@ $(document).ready(function()
 </tr> 
 </thead> 
 <tbody> 
+<tr> 
+    <td><a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a></td> 
+    <td>2.0.4</td> 
+    <td>http://opencdn.me/script/bootstrap.js</td> 
+</tr>
 <tr> 
     <td><a href="http://script.aculo.us/" target="_blank">Script.aculo.us</a></td> 
     <td>1.9.0</td> 
