--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@ $(document).ready(function()
 
   </head>
   <body>
-      <!-- <div id="header">
+      <div id="header">
         <nav>
           <li class="fork"><a href="/">Home</a></li>
-           <li class="downloads"><a href="https://github.com/hikikomorime/portal/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/hikikomorime/portal/tarball/master">TAR</a></li>
+          <!-- <li class="downloads"><a href="https://github.com/hikikomorime/portal/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/hikikomorime/portal/tarball/master">TAR</a></li> -->
           <li class="title">UPDATE: 03.07.2012</li>
         </nav>
-      </div> -->
+      </div><!-- end header -->
 
     <div class="wrapper">
 
@@ -104,10 +104,10 @@ $(document).ready(function()
 </tbody> 
 </table> 
 
-<h3>How to use our repository?</h3>
+<!-- <h3>How to use our repository?</h3>
 <p>For example you want to use jQuery on your site. Then just paste this code into your HEAD section</p>
 
-<script src="https://gist.github.com/3035406.js?file=head section"></script>
+<script src="https://gist.github.com/3035406.js?file=head section"></script> -->
 
 <div id="title">
           <hr>
