--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ $(document).ready(function()
     <td>http://opencdn.me/script/mootools.js</td> 
 </tr>
 <tr> 
-    <td><a href="https://developers.google.com/chrome/chrome-frame/" target="_blank">Chrome Frame</a></td> 
+    <td><a href="http://developers.google.com/chrome/chrome-frame/" target="_blank">Chrome Frame</a></td> 
     <td>1.0.2</td> 
     <td>http://opencdn.me/script/chrome-frame.js</td> 
 </tr> 
@@ -111,7 +111,7 @@ $(document).ready(function()
 
 <div id="title">
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/hikikomorime">hikikomorime</a></span>
+          <span class="credits left">Project maintained by <a href="https://github.com/hikikomorime">Hikikomori</a></span>
           <span class="credits right">Hosted on GitHub & Cloudflare</span>
           </div>
       </section>
