--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@ $(document).ready(function()
     <td><a href="http://developers.google.com/chrome/chrome-frame/" target="_blank">Chrome Frame</a></td> 
     <td>1.0.2</td> 
     <td>http://opencdn.me/script/chrome-frame.js</td> 
+</tr>
+<tr> 
+    <td><a href="http://angularjs.org/" target="_blank">Angular</a></td> 
+    <td>1.0.2</td> 
+    <td>http://opencdn.me/script/angular.js</td> 
 </tr> 
 </tbody> 
 </table> 
