--- a/index.html
+++ b/index.html
@@ -106,7 +106,22 @@ $(document).ready(function()
     <td><a href="http://angularjs.org/" target="_blank">Angular</a></td> 
     <td>1.0.1</td> 
     <td>http://opencdn.me/script/angular.js</td> 
-</tr> 
+</tr>
+<tr> 
+    <td><a href="https://github.com/jakesgordon/javascript-state-machine" target="_blank">JS State Machine</a></td> 
+    <td>2.1.0</td> 
+    <td>http://opencdn.me/script/state-machine.js</td> 
+</tr>
+<tr> 
+    <td><a href="http://augmentjs.com/" target="_blank">Augment</a></td> 
+    <td>0.4.2</td> 
+    <td>http://opencdn.me/script/augment.js</td> 
+</tr>
+<tr> 
+    <td><a href="https://github.com/jeromegn/Backbone.localStorage" target="_blank">Backbone.localStorage</a></td> 
+    <td>1.0</td> 
+    <td>http://opencdn.me/script/backbone.localStorage.js</td> 
+</tr>
 </tbody> 
 </table> 
 
