--- a/index.html
+++ b/index.html
@@ -122,6 +122,21 @@ $(document).ready(function()
     <td>1.0</td> 
     <td>http://opencdn.me/script/backbone.localStorage.js</td> 
 </tr>
+<tr> 
+    <td><a href="http://documentcloud.github.com/backbone/" target="_blank">Backbone</a></td> 
+    <td>0.9.2</td> 
+    <td>http://opencdn.me/script/backbone.js</td> 
+</tr>
+<tr> 
+    <td><a href="https://github.com/theironcook/Backbone.ModelBinder" target="_blank">Backbone.modelBinder</a></td> 
+    <td>0.1.5</td> 
+    <td>http://opencdn.me/script/backbone.modelBinder.js</td> 
+</tr>
+<tr> 
+    <td><a href="http://camanjs.com/" target="_blank">CamanJS</a></td> 
+    <td>3.1.2</td> 
+    <td>http://opencdn.me/script/caman.js</td> 
+</tr>
 </tbody> 
 </table> 
 
