--- a/index.html
+++ b/index.html
@@ -137,6 +137,16 @@ $(document).ready(function()
     <td>3.1.2</td> 
     <td>http://opencdn.me/script/caman.js</td> 
 </tr>
+<tr> 
+    <td><a href="https://github.com/codler/jQuery-Css3-Finalize" target="_blank">CSS3 Finalize</a></td> 
+    <td>2.4</td> 
+    <td>http://opencdn.me/script/css3finalize.js</td> 
+</tr>
+<tr> 
+    <td><a href="http://css3pie.com/" target="_blank">CSS3 PIE</a></td> 
+    <td>1.0.0</td> 
+    <td>http://opencdn.me/script/PIE.js</td> 
+</tr>
 </tbody> 
 </table> 
 
