--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>OpenCDN.me</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script type="text/javascript" src="javascripts/jquery.min.js"></script>
+    <script type="text/javascript" src="script/jquery.js"></script>
     <script type="text/javascript" src="javascripts/jquery.tablesorter.min.js"></script> 
     <script type="text/javascript">
 $(document).ready(function() 
@@ -18,7 +18,7 @@ $(document).ready(function()
     </script>
     <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="script/html5shiv.js"></script>
     <![endif]-->
     <!--[if lt IE 8]>
     <link rel="stylesheet" href="stylesheets/ie.css">
@@ -146,6 +146,11 @@ $(document).ready(function()
     <td><a href="http://css3pie.com/" target="_blank">CSS3 PIE</a></td> 
     <td>1.0.0</td> 
     <td>http://opencdn.me/script/PIE.js</td> 
+</tr>
+<tr> 
+    <td><a href="https://github.com/aFarkas/html5shiv" target="_blank">HTML5shiv</a></td> 
+    <td>3.6 rc1</td> 
+    <td>http://opencdn.me/script/html5shiv.js</td> 
 </tr>
 </tbody> 
 </table> 
