--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ $(document).ready(function()
 <h3>Angular list</h3>
 <div ng-view></div>
 
-<h3>Choose your destiny</h3>
+<!-- <h3>Choose your destiny</h3>
 
 <table id="jsTable" class="tablesorter"> 
 <thead> 
@@ -161,7 +161,7 @@ $(document).ready(function()
     <td>http://opencdn.me/script/html5shiv.js</td> 
 </tr>
 </tbody> 
-</table> 
+</table> -->
 
 <!-- <h3>How to use our repository?</h3>
 <p>For example you want to use jQuery on your site. Then just paste this code into your HEAD section</p>
