--- a/list.html
+++ b/list.html
@@ -1,5 +1,5 @@
 <input type="text" ng-model="search" class="search-query" placeholder="Search">
-<table>
+<table id="jsTable" class="tablesorter">
   <thead>
   <tr>
     <th>Name</th>
