--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script type="text/javascript" src="script/jquery.js"></script>
-    <script src="http://code.angularjs.org/angular-1.0.1.min.js"></script>
-    <script src="http://code.angularjs.org/angular-resource-1.0.1.min.js">
+    <script src="script/angular.js"></script>
+    <script src="script/angular-resource.js">
     </script>
     <script src="project.js"></script>
     <script src="mongolab.js"></script>
@@ -56,10 +56,10 @@ $(document).ready(function()
 <h3>Always up to date!</h3>
 <p>Be sure that the script you are using is always up to date and you have the <span class="yello">latest version available</span>. No need to check library websites or update the links in your code. <span class="whit">Open<span class="yello">CDN</span>.me</span> will take care of that. <br />All scripts are <span class="yello">minified</span> so your website should not gain too much additional weight.</p>
 
-<h3>Angular list</h3>
+<h3>Choose your destiny</h3>
 <div ng-view></div>
 
-<!-- <h3>Choose your destiny</h3>
+<h3>Choose your destiny</h3>
 
 <table id="jsTable" class="tablesorter"> 
 <thead> 
@@ -161,7 +161,7 @@ $(document).ready(function()
     <td>http://opencdn.me/script/html5shiv.js</td> 
 </tr>
 </tbody> 
-</table> -->
+</table>
 
 <!-- <h3>How to use our repository?</h3>
 <p>For example you want to use jQuery on your site. Then just paste this code into your HEAD section</p>
