--- a/detail.html
+++ b/detail.html
@@ -25,6 +25,6 @@
   <a href="#/" class="btn">Cancel</a>
   <button ng-click="save()" ng-disabled="isClean() || myForm.$invalid"
           class="btn btn-primary">Save</button>
-  <button ng-click="destroy()"
-          ng-show="project._id" class="btn btn-danger">Delete</button>
+  <!-- <button ng-click="destroy()"
+          ng-show="project._id" class="btn btn-danger">Delete</button> -->
 </form>
