--- a/detail.html
+++ b/detail.html
@@ -15,10 +15,9 @@
         Not a URL</span>
   </div>
  
- <label>Version</label>
+ <p><label>Version</label>
   <textarea name="version" ng-model="project.version"></textarea>
- <br />
- <br />
+</p>
   <label>CDN link</label>
   <textarea name="description" ng-model="project.description"></textarea>
  
