--- a/detail.html
+++ b/detail.html
@@ -7,7 +7,7 @@
   </div>
  
   <div class="control-group" ng-class="{error: myForm.site.$invalid}">
-    <label>Project</label>
+    <label>Website</label>
     <input type="url" name="site" ng-model="project.site" required>
     <span ng-show="myForm.site.$error.required" class="help-inline">
         Required</span>
