--- a/index copy.html
+++ b/index copy.html
@@ -13,6 +13,14 @@
     </script>
     <script src="project.js"></script>
     <script src="mongolab.js"></script>
+    <script type="text/javascript" src="javascripts/jquery.tablesorter.min.js"></script> 
+    <script type="text/javascript">
+$(document).ready(function() 
+    { 
+        $("#jsTable").tablesorter( {sortList: [[0,0,0], [0,0,0]]} ); 
+    } 
+); 
+    </script>
     <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
       <script src="script/html5shiv.js"></script>
