--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div id="title">
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/hikikomorime">Hikikomori</a></span>
-          <span class="credits right">Hosted on GitHub & Cloudflare</span>
+          <span class="credits right"><a href="http://github.com">GitHub</a>, <a href="http://mongolab.com">MongoDB</a> <span class="whit">&</span> <a href="http://cloudflare.com">Cloudflare</a> made it possible.</span>
           </div>
       </section>
 
