--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <section>
         <div id="title">
-          <h1>Open<span class="yello">CDN</span><small>.me</small></h1>
+          <h1><span class="whit">Open<span class="yello">CDN</span><small>.me</small></span></h1>
           <p>The most popular <small>and not so popular</small> JS libraries out there</p>
           <hr>
         </div>
