--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="/">Home</a></li>
+          <li class="fork"><a href="/">Refresh</a></li>
           <!-- <li class="downloads"><a href="https://github.com/hikikomorime/portal/zipball/master">ZIP</a></li>
           <li class="downloads"><a href="https://github.com/hikikomorime/portal/tarball/master">TAR</a></li> -->
           <li class="title">UPDATE: 03.07.2012</li>
