--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>OpenCDN.me</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
     <script type="text/javascript" src="script/jquery.js"></script>
     <script src="script/angular.js"></script>
     <script src="script/angular-resource.js">
