--- a/list.html
+++ b/list.html
@@ -1,5 +1,7 @@
+<br />
 <input type="text" ng-model="search" class="search-query" placeholder="Search">
-<table id="jsTable" class="tablesorter">
+<br />
+<table>
   <thead>
   <tr>
     <th>Name</th>
@@ -12,7 +14,7 @@
   <tr ng-repeat="project in projects | filter:search | orderBy:'name'">
     <td><a href="{{project.site}}" target="_blank">{{project.name}}</a></td>
     <td>{{project.version}}</td>
-    <td>http://opencdn.me/script/{{project.description}}</td>
+    <td>http://js.opencdn.me/{{project.description}}</td>
     <td>
       <a href="#/edit/{{project._id.$oid}}">edit<i class="icon-pencil"></i></a>
     </td>
