--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <h3>Always up to date!</h3>
 <p>Be sure that the script you are using is always up to date and you have the <span class="yello">latest version available</span>. No need to check library websites or update the links in your code. <span class="whit">Open<span class="yello">CDN</span>.me</span> will take care of that. <br />All scripts are <span class="yello">minified</span> so your website should not gain too much additional weight.</p>
 
-<h3>Choose your destiny</h3>
+<h3>There is plenty to choose from! See?</h3>
 <div ng-view></div>
 
 <!-- <h3>How to use our repository?</h3>
