--- a/list.html
+++ b/list.html
@@ -1,5 +1,5 @@
 <br />
-<input type="text" ng-model="search" class="search-query" placeholder="Search">
+<div align="center">What are you looking for?<br /><input type="text" ng-model="search" class="search-query" placeholder="Find the script"></div>
 <br />
 <table>
   <thead>
