--- a/list.html
+++ b/list.html
@@ -7,7 +7,7 @@
     <th>Name</th>
     <th>Version</th>
     <th>OpenCDN</th>
-    <th><a href="#/new">add<i class="icon-plus-sign"></i></a></th>
+    <!-- <th><a href="#/new">add<i class="icon-plus-sign"></i></a></th> -->
   </tr>
   </thead>
   <tbody>
@@ -15,9 +15,9 @@
     <td><a href="{{project.site}}" target="_blank">{{project.name}}</a></td>
     <td>{{project.version}}</td>
     <td>http://js.opencdn.me/{{project.description}}</td>
-    <td>
+    <!-- <td>
       <a href="#/edit/{{project._id.$oid}}">edit<i class="icon-pencil"></i></a>
-    </td>
+    </td> -->
   </tr>
   </tbody>
 </table>
