--- a/new/index.html
+++ b/new/index.html
@@ -6,11 +6,6 @@
 		<link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8">
 		<style type="text/css" media="screen">
 		h1.fontface {font: 85px/68px 'CaviarDreamsRegular', Arial, sans-serif;letter-spacing: 0; line-height: 0.1;}
-
-		p.style1 {font: 18px/27px 'CaviarDreamsItalic', Arial, sans-serif;}
-		p.style2 {font: 18px/27px 'CaviarDreamsBoldItalic', Arial, sans-serif;}
-		p.style3 {font: 18px/27px 'CaviarDreamsRegular', Arial, sans-serif;}
-		p.style4 {font: 18px/27px 'CaviarDreamsBold', Arial, sans-serif;}
 		.redish {color: #E2413A;}
 		.redishback {background-color: #E2413; height: 28px; margin: 0; padding: 0; z-index: 2;}
 		.redishbackmain {background-color: #E2413A; height: 28px; margin: 0; padding: 0; position: relative; top: 341px; z-index: -1;}
@@ -28,9 +23,8 @@
 			padding: 0;
 			text-align: center;
 			font-family: 'CaviarDreamsBold', Arial, sans-serif;
+			font-size: 19px;
 		}
-		.social {font: 20px 'CaviarDreamsBold', Arial, sans-serif;}
-		.navibox {background-color: #E2413A; width: 130px; height: 250px; position: fixed; z-index: -1; top: 100px; border-radius: 5px;}
 		</style>
 	</head>
 	<body>
@@ -42,8 +36,7 @@
 			<div class="redishback">
 				<span class="greyishback">your javascript libraries in the CLOUD</span>
 			</div>
-			<br />
-			<br />
+			<p class="style1">test</p>
 			<span style="font-size: 20px; line-height: 40px;">Find us on social networks:</span>
 			<br />
 			<img src="images/icons/Google+.png" alt="g+" /> <span style="position: relative; top: -12px;">Google+:</span>
