--- a/new/index.html
+++ b/new/index.html
@@ -4,6 +4,10 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8">
+		    <script src="../script/angular.js"></script>
+    <script src="../script/angular-resource.js"></script>
+    <script src="../project.js"></script>
+    <script src="../mongolab.js"></script>
 		<style type="text/css" media="screen">
 		h1.fontface {font: 85px/68px 'CaviarDreamsRegular', Arial, sans-serif;letter-spacing: 0; line-height: 0.1;}
 		.redish {color: #E2413A;}
