--- a/new.html
+++ b/new.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
-		<link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8">
-		    <script src="../script/angular.js"></script>
-    <script src="../script/angular-resource.js"></script>
-    <script src="../project.js"></script>
-    <script src="../mongolab.js"></script>
+		<link rel="stylesheet" href="new/fonts/stylesheet.css" type="text/css" charset="utf-8">
+		    <script src="script/angular.js"></script>
+    <script src="script/angular-resource.js"></script>
+    <script src="project.js"></script>
+    <script src="mongolab.js"></script>
 		<style type="text/css" media="screen">
 		h1.fontface {font: 85px/68px 'CaviarDreamsRegular', Arial, sans-serif;letter-spacing: 0; line-height: 0.1;}
 		.redish {color: #E2413A;}
@@ -36,16 +36,17 @@
 		<div id="container">
 		<!-- <div class="navibox">aaa</div> -->
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
-			<img src="images/map.png" alt="map" />
+			<img src="new/images/map.png" alt="map" />
 			<div class="redishback">
 				<span class="greyishback">your javascript libraries in the CLOUD</span>
 			</div>
 			<p class="style1">test</p>
+			<div ng-view></div>
 			<span style="font-size: 20px; line-height: 40px;">Find us on social networks:</span>
 			<br />
-			<img src="images/icons/Google+.png" alt="g+" /> <span style="position: relative; top: -12px;">Google+:</span>
-			<img src="images/icons/Facebook.png" alt="facebook" /> <span style="position: relative; top: -12px; color: #436EAC;">Facebook</span>
-			<img src="images/icons/Twitter.png" alt="twitter" /> <span style="position: relative; top: -12px; color: #0598C9;">Twitter</span>
+			<img src="new/images/icons/Google+.png" alt="g+" /> <span style="position: relative; top: -12px;">Google+:</span>
+			<img src="new/images/icons/Facebook.png" alt="facebook" /> <span style="position: relative; top: -12px; color: #436EAC;">Facebook</span>
+			<img src="new/images/icons/Twitter.png" alt="twitter" /> <span style="position: relative; top: -12px; color: #0598C9;">Twitter</span>
 		</div>
 	</body>
 </html>
