--- a/index.html
+++ b/index.html
@@ -1,71 +1,80 @@
 <!doctype html>
 <html ng-app="project">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link rel="shortcut icon" href="https://github.com/favicon.ico" type="image/x-icon" />
-    <title>OpenCDN.me</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
-    <script type="text/javascript" src="script/jquery.js"></script>
-    <script src="script/angular.js"></script>
-    <script src="script/angular-resource.js">
-    </script>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="chrome=1">
+		<link rel="stylesheet" href="new/fonts/stylesheet.css" type="text/css" charset="utf-8">
+		    <script src="script/angular.js"></script>
+    <script src="script/angular-resource.js"></script>
     <script src="project.js"></script>
     <script src="mongolab.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="script/html5shiv.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<style type="text/css" media="screen">
+		h1.fontface {font: 85px/68px 'CaviarDreamsRegular', Arial, sans-serif;letter-spacing: 0; line-height: 0.1;}
+		.redish {color: #E2413A;}
+		.redishback {background-color: #E2413A; height: 28px; margin: 0; padding: 0; z-index: 2;}
+		.redishbackmain {background-color: #E2413A; height: 28px; margin: 0; padding: 0; position: relative; top: 341px; z-index: -1;}
+		.greyishback {background-color: #f5f5f5; color: #E2413A; padding-left: 10px; padding-right: 10px; font: 26px/28px 'CaviarDreamsBold', Arial, sans-serif; z-index: 1;}
+		
+		#container {
+			width: 760px;
+			margin: -28px;
+			margin-left: auto;
+			margin-right: auto;
+		}
+		body {
+			background-color: #f5f5f5;
+			margin: 0;
+			padding: 0;
+			text-align: center;
+			font-family: 'CaviarDreamsBold', Arial, sans-serif;
+			font-size: 19px;
+		}
+		th {
+  text-align: left;
+  padding: 5px 10px;
+  border-bottom: 1px solid #434343;
+  color: #b6b6b6;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-weight: normal;
+  font-size: 16px;
+}
 
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="/">Refresh</a></li>
-          <!-- <li class="downloads"><a href="https://github.com/hikikomorime/portal/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/hikikomorime/portal/tarball/master">TAR</a></li> -->
-          <li class="title">UPDATE: 03.07.2012</li>
-        </nav>
-      </div><!-- end header -->
+td {
+  text-align: left;
+  padding: 5px 10px;
+  border-bottom: 1px solid #434343;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-size: 15px;
+}
+input,textarea,select,.uneditable-input{display:inline-block;width:210px;height:18px;padding:4px;margin-bottom:9px;font-size:13px;line-height:18px;color:#555555;border:1px solid #cccccc;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;}
 
-    <div class="wrapper">
+dt {
+  color: #F0E7D5;
+  font-family: 'OpenSansSemibold', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-weight: normal;
+}
+a {color: #E2413A; text-decoration: none;}
 
-      <section>
-        <div id="title">
-          <h1><span class="whit">Open<span class="yello">CDN</span><small>.me</small></span></h1>
-          <p>The most popular <small>and not so popular</small> JS libraries out there</p>
-          <hr>
-        </div>
-
-<p>Everyone is using javascript libraries nowadays but linking to several sources might be annoying. There's Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
-<p>With <span class="whit">Open<span class="yello">CDN</span>.me</span> you have them all in one place. That's neat right?</p>
-
-<h3>Always up to date!</h3>
-<p>Be sure that the script you are using is always up to date and you have the <span class="yello">latest version available</span>. No need to check library websites or update the links in your code. <span class="whit">Open<span class="yello">CDN</span>.me</span> will take care of that. <br />All scripts are <span class="yello">minified</span> so your website should not gain too much additional weight.</p>
-
-<h3>There is plenty to choose from! See?</h3>
-<div ng-view></div>
-
-<!-- <h3>How to use our repository?</h3>
-<p>For example you want to use jQuery on your site. Then just paste this code into your HEAD section</p>
-
-<script src="https://gist.github.com/3035406.js?file=head section"></script> -->
-
-<div id="title">
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/hikikomorime">Hikikomori</a></span>
-          <span class="credits right"><a href="http://github.com">GitHub</a>, <a href="http://mongolab.com">MongoDB</a> <span class="whit">&</span> <a href="http://cloudflare.com">Cloudflare</a> made it possible.</span>
-          </div>
-      </section>
-
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
-    
-  </body>
+		</style>
+	</head>
+	<body>
+		<div class="redishbackmain"></div>
+		<div id="container">
+		<!-- <div class="navibox">aaa</div> -->
+			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
+			<img src="new/images/map.png" alt="map" />
+			<div class="redishback">
+				<span class="greyishback">your javascript libraries in the CLOUD</span>
+			</div>
+			<p class="style1">test</p>
+			<div align="center" ng-view></div>
+			<br />
+			<br />
+			<span style="font-size: 20px; line-height: 40px;">Find us on social networks:</span>
+			<br />
+			<img src="new/images/icons/Google+.png" alt="g+" /> <span style="position: relative; top: -12px;">Google+:</span>
+			<img src="new/images/icons/Facebook.png" alt="facebook" /> <span style="position: relative; top: -12px; color: #436EAC;">Facebook</span>
+			<img src="new/images/icons/Twitter.png" alt="twitter" /> <span style="position: relative; top: -12px; color: #0598C9;">Twitter</span>
+		</div>
+	</body>
 </html>
