--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 			font-family: 'CaviarDreamsBold', Arial, sans-serif;
 			font-size: 19px;
 		}
+		
+		table {
+		width: 100%;
+		}
+		
 		th {
   text-align: left;
   padding: 5px 10px;
