--- a/list.html
+++ b/list.html
@@ -13,7 +13,7 @@
   <tbody>
   <tr ng-repeat="project in projects | filter:search | orderBy:'name'">
     <td><a href="{{project.site}}" target="_blank">{{project.name}}</a></td>
-    <td>{{project.version}}</td>
+    <td style="color: #0598C9;">{{project.version}}</td>
     <td>http://js.opencdn.me/{{project.description}}</td>
     <!-- <td>
       <a href="#/edit/{{project._id.$oid}}">edit<i class="icon-pencil"></i></a>
