--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="redishback">
 				<span class="greyishback">your javascript libraries in the CLOUD</span>
 			</div>
-			<p>Everyone is using javascript libraries nowadays but linking to several sources might be annoying. There's Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
+			<p>Everyone is using javascript libraries nowadays but linking to several sources might be annoying. There is Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
 <p>With OpenCDN.me you have them all in one place. That's neat right?</p>
 			<div align="center" ng-view></div>
 			<br />
