--- a/detail.html
+++ b/detail.html
@@ -3,25 +3,32 @@
     <label>Script name</label>
     <input type="text" name="name" ng-model="project.name" required>
     <span ng-show="myForm.name.$error.required" class="help-inline">
-        Required</span>
+        *</span>
   </div>
  
   <div class="control-group" ng-class="{error: myForm.site.$invalid}">
     <label>Website</label>
     <input type="url" name="site" ng-model="project.site" required>
     <span ng-show="myForm.site.$error.required" class="help-inline">
-        Required</span>
+        *</span>
     <span ng-show="myForm.site.$error.url" class="help-inline">
         Not a URL</span>
   </div>
  
- <p><label>Version</label>
-  <textarea name="version" ng-model="project.version"></textarea>
-</p>
-  <label>CDN link</label>
-  <textarea name="description" ng-model="project.description"></textarea>
- 
-  <br />
+ <div class="control-group" ng-class="{error: myForm.version.$invalid}">
+    <label>Version</label>
+    <input type="text" name="version" ng-model="project.version" required>
+    <span ng-show="myForm.name.$error.required" class="help-inline">
+        *</span>
+  </div>
+  
+   <div class="control-group" ng-class="{error: myForm.description.$invalid}">
+    <label>CDN file</label>
+    <input type="text" name="description" ng-model="project.description" required>
+    <span ng-show="myForm.name.$error.required" class="help-inline">
+        *</span>
+  </div>
+
   <a href="#/" class="btn">Cancel</a>
   <button ng-click="save()" ng-disabled="isClean() || myForm.$invalid"
           class="btn btn-primary">Save</button>
