--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id="container">
 		<!-- <div class="navibox">aaa</div> -->
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
-			<img src="new/images/map.png" alt="map" />
+			<img src="new/images/map.png" width="430" height="217" alt="map" />
 			<div class="redishback">
 				<span class="greyishback">your javascript libraries in the CLOUD</span>
 			</div>
@@ -27,9 +27,9 @@
 			<br />
 			<span style="font-size: 20px; line-height: 40px;">Find us on social networks:</span>
 			<br />
-			<img src="new/images/icons/Google+.png" alt="g+" /> <span style="position: relative; top: -12px;">Google+:</span>
-			<img src="new/images/icons/Facebook.png" alt="facebook" /> <span style="position: relative; top: -12px; color: #436EAC;">Facebook</span>
-			<img src="new/images/icons/Twitter.png" alt="twitter" /> <span style="position: relative; top: -12px; color: #0598C9;">Twitter</span>
+			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <span style="position: relative; top: -12px;">Google+:</span>
+			<img src="new/images/icons/Facebook.png" width="33" height="32" alt="facebook" /> <span style="position: relative; top: -12px; color: #436EAC;">Facebook</span>
+			<img src="new/images/icons/Twitter.png" width="33" height="33" alt="twitter" /> <span style="position: relative; top: -12px; color: #0598C9;">Twitter</span>
 		</div>
 	</body>
 </html>
