--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 			<br />
 			<span style="font-size: 20px; line-height: 40px;">Find us on social networks:</span>
 			<br />
-			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <span style="position: relative; top: -12px;">Google+:</span>
-			<img src="new/images/icons/Facebook.png" width="33" height="32" alt="facebook" /> <span style="position: relative; top: -12px; color: #436EAC;">Facebook</span>
-			<img src="new/images/icons/Twitter.png" width="33" height="33" alt="twitter" /> <span style="position: relative; top: -12px; color: #0598C9;">Twitter</span>
+			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <span id="social-gplus">Google+</span>
+			<img src="new/images/icons/Facebook.png" width="33" height="32" alt="facebook" /> <span id="social-facebook">Facebook</span>
+			<img src="new/images/icons/Twitter.png" width="33" height="33" alt="twitter" /> <span id="social-twitter">Twitter</span>
 		</div>
 	</body>
 </html>
