--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 	<body>
 		<div class="redishbackmain"></div>
 		<div id="container">
-		<!-- <div class="navibox">aaa</div> -->
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
 			<img src="new/images/map.png" width="430" height="217" alt="map" />
 			<div class="redishback">
 				<span class="greyishback">your javascript libraries in the CLOUD</span>
 			</div>
-			<p>Everyone is using javascript libraries nowadays but linking to several sources might be annoying. There is Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
-<p>With OpenCDN.me you have them all in one place. That's neat right?</p>
+			<p>
+			Everyone is using javascript libraries nowadays but linking to several sources might be annoying. There is Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
+			<p>With OpenCDN.me you have them all in one place. That's neat right?</p>
 			<div align="center" ng-view></div>
-			<br />
-			<br />
+			<h2>Why should I want to use it?</h2>
+			<p>Being on your own, YOU must be sure that the script you are using is always up to date and you have the latest version available. With us, you don't have to bother. OpenCDN.me will take care of that.</p>
 			<span style="font-size: 20px; line-height: 40px;">Find us on social networks:</span>
 			<br />
 			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <span id="social-gplus">Google+</span>
