--- a/list.html
+++ b/list.html
@@ -1,5 +1,5 @@
 <br />
-<div align="center">What are you looking for?<br /><input type="text" ng-model="search" class="search-query" placeholder="Find the script"></div>
+<div align="center"><h2>What are you looking for?</h2><input type="text" ng-model="search" class="search-query" placeholder="start typing"></div>
 <br />
 <table>
   <thead>
