--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="project">
 	<head>
 		<meta charset="utf-8">
+		<title>OpenCDN.ne - your javascript libraries in the CLOUD</title>
 		<link rel="shortcut icon" href="https://github.com/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="new/fonts/stylesheet.css" type="text/css" charset="utf-8">
 		<link rel="stylesheet" href="stylesheets/style.css" type="text/css" charset="utf-8">
