--- a/list.html
+++ b/list.html
@@ -1,7 +1,7 @@
 <br />
 <div align="center"><h2>What are you looking for?</h2><input type="text" ng-model="search" class="search-query" placeholder="start typing"></div>
 <br />
-<table id="example">
+<table id="jsTable" class="tablesorter">
   <thead>
   <tr>
     <th>Name</th>
