--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     		<script src="script/angular-resource.js"></script>
     		<script src="project.js"></script>
     		<script src="mongolab.js"></script>
+    		<script src="script/jquery.js"></script>
+<script src="javascripts/jquery.tablesorter.min.js"></script>
+<script src="javascripts/jquery.tablesorter.pager.js"></script>
+	<script type="text/javascript">
+	$(function() {
+		$("table")
+			.tablesorter({widthFixed: true, widgets: ['zebra']})
+			.tablesorterPager({container: $("#pager")});
+	});
+	</script>
 	</head>
 	<body>
 		<div class="redishbackmain"></div>
@@ -23,6 +33,21 @@
 			Everyone is using javascript libraries nowadays but linking to several sources might be annoying. There is Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
 			<p>With OpenCDN.me you have them all in one place. That's neat right?</p>
 			<div align="center" ng-view></div>
+			<div id="pager" class="pager">
+	<form>
+		<img src="images/first.png" class="first"/>
+		<img src="images/prev.png" class="prev"/>
+		<input type="text" class="pagedisplay"/>
+		<img src="images/next.png" class="next"/>
+		<img src="images/last.png" class="last"/>
+		<select class="pagesize">
+			<option selected="selected"  value="10">10</option>
+			<option value="20">20</option>
+			<option value="30">30</option>
+			<option  value="40">40</option>
+		</select>
+	</form>
+</div>
 			<h2>Why should I want to use it?</h2>
 			<p>Being on your own, YOU must be sure that the script you are using is always up to date and you have the latest version available. With us, you don't have to bother. OpenCDN.me will take care of that.</p>
 			<span style="font-size: 20px; line-height: 40px;">Find us on social networks:</span>
