--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src="javascripts/jquery.tablesorter.pager.js"></script>
 	<script type="text/javascript">
 	$(function() {
-		$("table")
+		$("#jsTable")
 			.tablesorter({widthFixed: true, widgets: ['zebra']})
 			.tablesorterPager({container: $("#pager")});
 	});
