--- a/index.html
+++ b/index.html
@@ -14,10 +14,22 @@
 	<body>
 		<div class="redishbackmain"></div>
 		<div id="container">
+		<div class="navbar navbar-inner navbar-fixed-top">
+  <div class="navbar-inner"> 
+      <!-- Be sure to leave the brand out there if you want it shown -->
+      <a class="brand" href="index.html">OpenCDN.me</a>
+ <ul class="nav">
+  <li><a href="#">About</a></li>
+  <li><a href="#">Scripts</a></li>
+  <li><a href="#">Why?</a></li>
+  <li><a href="#">How it works?</a></li>
+</ul>
+  </div>
+</div>
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
 			<img src="new/images/map.png" width="430" height="217" alt="map" />
 			<div class="redishback">
-				<span class="greyishback">your javascript libraries in the CLOUD</span>
+				<div class="greyishback">your javascript libraries in the CLOUD</div>
 			</div>
 			<p>
 			Everyone is using javascript libraries nowadays but linking to several sources might be annoying. There is Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
