--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 			</div>
 			<p>
 			Everyone is using javascript libraries nowadays but linking to several sources might be annoying. There is Google Ajax API and other services but they just choose what's better for you and host only most popular libraries.</p>
-			<p>With OpenCDN.me you have them all in one place. That's neat right?</p>
+			<p>With OpenCDN.me you have them all in one place. That's neat right?<br /><br /></p>
+			<h2>What are you looking for?</h2>
 			<div align="center" ng-view></div>
 			<h2>Why should I want to use it?</h2>
 			<p>Being on your own, YOU must be sure that the script you are using is always up to date and you have the latest version available. With us, you don't have to bother. OpenCDN.me will take care of that.</p>
