--- a/list.html
+++ b/list.html
@@ -1,5 +1,4 @@
-<br />
-<div align="center"><h2>What are you looking for?</h2><input type="text" ng-model="search" class="search-query" placeholder="start typing"></div>
+<div align="center"><input type="text" ng-model="search" class="search-query" placeholder="start typing"></div>
 <br />
 <table id="jsTable" class="tablesorter">
   <thead>
