--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
       <a class="brand" href="index.html">OpenCDN.me</a>
  <ul class="nav">
   <li><a href="#">About</a></li>
+  <li class="divider-vertical"></li>
   <li><a href="#">Scripts</a></li>
+  <li class="divider-vertical"></li>
   <li><a href="#">Why?</a></li>
+  <li class="divider-vertical"></li>
   <li><a href="#">How it works?</a></li>
 </ul>
   </div>
