--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
 	<body>
 		<div class="redishbackmain"></div>
 		<div id="container">
-		<div class="navbar navbar-inner navbar-fixed-top">
-  <div class="navbar-inner"> 
-      <!-- Be sure to leave the brand out there if you want it shown -->
-      <a class="brand" href="index.html">OpenCDN.me</a>
- <ul class="nav">
-  <li><a href="#">About</a></li>
-  <li class="divider-vertical"></li>
-  <li><a href="#">Scripts</a></li>
-  <li class="divider-vertical"></li>
-  <li><a href="#">Why?</a></li>
-  <li class="divider-vertical"></li>
-  <li><a href="#">How it works?</a></li>
-</ul>
-  </div>
-</div>
+		<div id="navirel">
+			<div class="navbar navbar-inner navbar-fixed-top">
+  				<div class="navbar-inner">
+				<a class="brand" href="index.html">OpenCDN.me</a>
+ 				<ul class="nav">
+ 				<li><a href="#">About</a></li>
+ 				<li class="divider-vertical"></li>
+ 				<li><a href="#">Scripts</a></li>
+ 				<li class="divider-vertical"></li>
+ 				<li><a href="#">Why?</a></li>
+ 				<li class="divider-vertical"></li>
+ 				<li><a href="#">How it works?</a></li>
+ 				</ul>
+ 				</div>
+ 			</div>
+ 			test
+		</div>
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
 			<img src="new/images/map.png" width="430" height="217" alt="map" />
 			<div class="redishback">
