--- a/list.html
+++ b/list.html
@@ -6,7 +6,7 @@
     <th>Name</th>
     <th>Version</th>
     <th>OpenCDN</th>
-     <th><a href="#/new">add<i class="icon-plus-sign"></i></a></th>
+     <!-- <th><a href="#/new">add<i class="icon-plus-sign"></i></a></th> -->
   </tr>
   </thead>
   <tbody>
@@ -14,9 +14,9 @@
     <td><a href="{{project.site}}" target="_blank">{{project.name}}</a></td>
     <td style="color: #0598C9;">{{project.version}}</td>
     <td>http://opencdn.me/script/{{project.description}}</td>
-     <td>
+     <!-- <td>
       <a href="#/edit/{{project._id.$oid}}">edit<i class="icon-pencil"></i></a>
-    </td>
+    </td> -->
   </tr>
   </tbody>
 </table>
