--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="project">
 	<head>
 		<meta charset="utf-8">
-		<title>OpenCDN.ne - your javascript libraries in the CLOUD</title>
+		<title>OpenCDN.me - your javascript libraries in the CLOUD</title>
 		<link rel="shortcut icon" href="https://github.com/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="new/fonts/stylesheet.css" type="text/css" charset="utf-8">
 		<link rel="stylesheet" href="stylesheets/style.css" type="text/css" charset="utf-8">
@@ -15,7 +15,6 @@
 		<div class="redishbackmain"></div>
 		<div id="container">
 			<div class="navbar navbar-inner navbar-fixed-top">
-  				<div class="navbar-inner">
   				<div id="navirel">
 				<a class="brand" href="index.html">OpenCDN.me</a>
  				<ul class="nav">
@@ -27,7 +26,6 @@
  				<li class="divider-vertical"></li>
  				<li><a href="#">How it works?</a></li>
  				</ul>
- 				</div>
  			</div>
 		</div>
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
