--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 			<p>Being on your own, YOU must be sure that the script you are using is always up to date and you have the latest version available. With us, you don't have to bother. OpenCDN.me will take care of that.</p>
 			<span style="font-size: 20px; line-height: 40px;">Find us on social networks:</span>
 			<br />
-			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <span id="social-gplus">Google+</span>
-			<img src="new/images/icons/Facebook.png" width="33" height="32" alt="facebook" /> <span id="social-facebook">Facebook</span>
-			<img src="new/images/icons/Twitter.png" width="33" height="33" alt="twitter" /> <span id="social-twitter">Twitter</span>
+			<img src="new/images/icons/Google+.png" width="33" height="32" alt="g+" /> <a href="https://plus.google.com/u/0/109138097244725036901" class="social-gplus">Google+</a>
+			<img src="new/images/icons/Facebook.png" width="33" height="32" alt="facebook" /> <a href="http://facebook.com" class="social-facebook">Facebook</a>
+			<img src="new/images/icons/Twitter.png" width="33" height="33" alt="twitter" /> <a href="http://twitter.com" class="social-twitter">Twitter</a>
 		</div>
 		<script type="text/javascript">
 
