--- a/index copy.html
+++ b/index copy.html
@@ -14,9 +14,19 @@
 	<body>
 		<div class="redishbackmain"></div>
 		<div id="container">
-		<div class="navbar-inner navbar-fixed-top">
-		<!-- About |	Scripts | Why use it? | How to | Something missing? -->
-		<span class="divider-vertical"></span>
+			<div class="navbar navbar-inner navbar-fixed-top">
+  				<div id="navirel">
+				<a class="brand" href="index.html">OpenCDN.me</a>
+ 				<ul class="nav">
+ 				<li><a href="#">About</a></li>
+ 				<li class="divider-vertical"></li>
+ 				<li><a href="#">Scripts</a></li>
+ 				<li class="divider-vertical"></li>
+ 				<li><a href="#">Why?</a></li>
+ 				<li class="divider-vertical"></li>
+ 				<li><a href="#">How it works?</a></li>
+ 				</ul>
+ 			</div>
 		</div>
 			<h1 class="fontface">Open<span class="redish">CDN</span>.me</h1>
 			<img src="new/images/map.png" width="430" height="217" alt="map" />
